# modvc-speedtest

./: .gitignore  LICENSE  README.md  SETUP.md  ecosystem.config.js  index.html  nginx-http.conf  nginx-protected.conf  nginx.conf  speedtest.js  style.css
public/: index.html  speedtest.js  style.css
rust-backend/: Cargo.toml  README.md  run.sh
rust-backend/src/: main.rs
