[package]
name = "speedtest_server"
version = "1.0.0"
edition = "2021"
authors = ["MODVC Speedtest"]
description = "Ultra-fast Rust backend for speedtest"

[dependencies]
# Actix-web - One of the fastest web frameworks
actix-web = "4"
actix-files = "0.6"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }

# JSON handling
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Random bytes generation (fast)
rand = "0.8"

# HTTP client for IP lookup (using rustls for no OpenSSL dependency)
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Fast memory allocation
mimalloc = { version = "0.1", default-features = false }

# Logging
env_logger = "0.10"
log = "0.4"

# Bytes handling
bytes = "1"
futures = "0.3"

# CPU detection for worker threads
num_cpus = "1.16"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
